Added CI/CD pipeline with Docker Grid and Allure